  * Updated the conflicts list for the various dual-lived modules.
  * Added conflicts/replaces/provides for 
    + libio-compress-perl
    + libcompress-raw-bzip2-perl
    + libthreads-perl
    + libthreads-shared-perl
    + libparse-cpan-meta-perl
    + libparent-perl
    + libautodie-perl
  * Update the search path in the h2ph check. Thanks to Marius Vollmer.

 -- Niko Tyni <ntyni@debian.org>  Sun, 16 Aug 2009 16:35:58 +0300

perl (5.10.0-25) unstable; urgency=low

  * Fix File::Copy::copy with pipes on GNU/kFreeBSD.
    Thanks to Petr Salinger. (Closes: #537555)
  * Module::Build::Compat makefiles now support 'distclean'.
    Thanks to Ryan Niebur. (Closes: #527993)
  * Honor TMPDIR when open()ing an anonymous temporary file.
    Thanks to Norbert Buchmuller. (Closes: #528544)
  * Move to libdb4.7. (Closes: #536443)

 -- Niko Tyni <ntyni@debian.org>  Sat, 15 Aug 2009 23:24:30 +0300

perl (5.10.0-24) unstable; urgency=low

  * Change the perl-debug package section and priority to debug/extra.
  * POD fix for Module::Build::Cookbook.
  * Fix a memory leak with the map operator. (Closes: #528332)
  * Add gcc predefined macros to $Config{cppsymbols} on GNU/kFreeBSD.
    (Closes: #533098) 
  * Fix CPAN and CPANPLUS configuration to consistently use the
    site directories with both Build.PL and Makefile.PL. (Closes: #533707)
  * Save local versions of CPANPLUS::Config::System into /etc/perl.
    (See #533707)

 -- Niko Tyni <ntyni@debian.org>  Wed, 08 Jul 2009 23:21:31 +0300

perl (5.10.0-23) unstable; urgency=high

  * Don't try to check nonexistent .ph files: the kFreeBSD port
    doesn't have <asm/termios.h>. (Closes: #526974)
  * [SECURITY] CVE-2009-1391: Fix a buffer overflow in Compress::Raw::Zlib.
    (Closes: #532736)

 -- Niko Tyni <ntyni@debian.org>  Fri, 12 Jun 2009 21:26:18 +0300

perl (5.10.0-22) unstable; urgency=low

  * Make Archive::Extract work with recent versions of GNU tar.
    (Closes: #526822)
