@@ -5,7 +5,7 @@ Maintainer: Brendan O'Dea <bod@debian.org>
 Uploaders: Niko Tyni <ntyni@debian.org>
 Standards-Version: 3.8.1
 Build-Depends: file, cpio (>= 2.6-5), libdb4.7-dev, libgdbm-dev, netbase [!hurd-i386],
- gcc (>= 4:4.2),procps | hurd, zlib1g-dev | libz-dev
+ gcc (>= 4:4.2),procps | hurd, zlib1g-dev | libz-dev, libbz-dev
 Build-Conflicts: libterm-readline-gnu-perl (<< 1.17)
 Vcs-Git: git://git.debian.org/git/perl/perl.git
 Vcs-Browser: http://git.debian.org/?p=perl/perl.git
