@@ -34,6 +34,11 @@ package_upstream_version = $(shell dpkg-parsechangelog | \
 subst_upstream = -VUpstream-Version=$(package_upstream_version)
 subst_perlapi  = -Vperlapi:Provides="`./perl.static debian/mkprovides`"
 
+# for ext/Compress-Raw-Bzip2
+export BUILD_BZIP2=0
+export BZIP2_INCLUDE=/usr/include
+export BZIP2_LIB=/usr/lib
+
 build: build-stamp
 install: install-stamp
 
